@@ -331,7 +331,7 @@ MSG(MAGERY_1,							"You cannot target an item with this spell.")
 MSG(MAGERY_2,							"You cannot target a character with this spell.")
 MSG(MAGERY_3,							"You cannot target yourself with this spell.")
 MSG(MAGERY_4,							"You must target the ground with this spell.")
-MSG(MAGERY_5,							"You have not yet finished preparing the spell.")
+MSG(MAGERY_5,							"You are already casting a spell.")
 MSG(MAGERY_6,							"An anti-magic field disturbs the spell.")
 MSG(MAGERY_7,							"You cannot target a player with this spell.")
 MSG(MAGERY_8,							"You cannot target an NPC with this spell.")
@@ -407,7 +407,7 @@ MSG(MSG_FOOD_LVL_LOOKS,					"looks %s")
 MSG(MSG_FOOD_LVL_OTHER,					"%s looks %s")
 MSG(MSG_FOOD_LVL_SELF,					"You are %s")
 MSG(MSG_FORGIVEN,						"You have been forgiven")
-MSG(MSG_FROZEN,							"You are frozen and can not move.")
+MSG(MSG_FROZEN,							"You are frozen and cannot move.")
 MSG(MSG_GUARDS,							"Guards can now be called on you!")
 MSG(MSG_GUARDS_NOLONGER,				"Guards can no longer be called on you.")
 MSG(MSG_HEAVY,							"That is too heavy. You can't move that.")
@@ -558,7 +558,6 @@ MSG(NPC_PET_CARRYNOTHING,				"I'm carrying nothing.")
 MSG(NPC_PET_CONFUSED,					"*looks confused*")
 MSG(NPC_PET_DAYS_LEFT,					"I have been paid to work for %d more days.")
 MSG(NPC_PET_DECIDE_MASTER,				"%s appears to have decided that it is better off without a master!")
-MSG(NPC_PET_DESERTED,					"You sense that %s has deserted you.")
 MSG(NPC_PET_EMPLOYED,					"Sorry I am already employed.")
 MSG(NPC_PET_FAILURE,					"Sorry")
 MSG(NPC_PET_FOOD_NO,					"No thank you.")
@@ -836,7 +835,6 @@ MSG(RUNE_RENAME_SUCCESS,				"The etching on the rune has been changed.")
 MSG(KEY_TO,								"Key to: ")
 MSG(STONE_FOR,							"Stone for the ")
 MSG(HL_NO_CLIENT,						"Currently there are no clients online")
-MSG(HL_ONE_CLIENT,						"One client is online:")
 MSG(HL_MANY_CLIENTS,					"The number of clients online is")
 MSG(SKILLTITLE_NEOPHYTE,				"Neophyte")
 MSG(SKILLTITLE_NOVICE,					"Novice")
